--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@docusaurus/preset-classic": "^2.1.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "docusaurus-lunr-search": "^3.6.0",
+    "fast-xml-parser": "^5.3.0",
     "npm": "^11.0.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
